fixed z-Index

--- a/src/components/SocialShare/SocialShare.module.scss
+++ b/src/components/SocialShare/SocialShare.module.scss
@@ -6,7 +6,7 @@
   background: $grey-shade;
   position: sticky;
   top: 11.8rem;
-  z-index: 3;
+  z-index: 1;
 
   @include respond(phone) {
     top: 6.4rem;
